--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "*"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
