--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Microserviço de Pagamento - PostTech FIAP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc-watch --onSuccess \"node build/server.js\"",
     "lint": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "author": "Rafael Gonçalves <rafaelswitek@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.1.0",
@@ -21,7 +23,9 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
     "typescript": "*"
   },
   "dependencies": {
@@ -31,6 +35,13 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
     "tsc-watch": "^6.0.4",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.19"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/__tests__/**/*.test.ts"
+    ]
   }
 }
