incluindo variavel de ambiente para url base

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-MERCADO_PAGO_KEY=
-MERCADO_PAGO_USER_ID=
-MERCADO_PAGO_POS_ID=
+URL_BASE=http://localhost:3000
+
+MERCADO_PAGO_KEY=TEST-386762653562137-010116-302a2925b8ef1a61adc2edeea3bbbf69-1617198011
+MERCADO_PAGO_USER_ID=1617198011
+MERCADO_PAGO_POS_ID=SUC001POS001
