--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
