--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "coverage:report": "open coverage/lcov-report/index.html"
   },
   "author": "Rafael Gonçalves <rafaelswitek@gmail.com>",
   "license": "ISC",
