--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,16 @@ services:
       - '3307:3306'
     networks:
       - postech_net
+  
+  swagger-ui:
+    depends_on:
+      - app
+    image: swaggerapi/swagger-ui
+    container_name: swagger_ui_container
+    ports:
+      - "80:8080"
+    volumes:
+      - ./swagger:/usr/share/nginx/html/swagger
+    environment:
+      API_URL: /swagger/openapi.yaml
+
