--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-URL_BASE=http://localhost:3000
+URL_BASE=http://localhost
+PORTA=3000
 
-MERCADO_PAGO_KEY=TEST-386762653562137-010116-302a2925b8ef1a61adc2edeea3bbbf69-1617198011
-MERCADO_PAGO_USER_ID=1617198011
-MERCADO_PAGO_POS_ID=SUC001POS001
+MERCADO_PAGO_KEY=
+MERCADO_PAGO_USER_ID=
+MERCADO_PAGO_POS_ID=
+
+MYSQL_PORT=
+MYSQL_ROOT_PASSWORD=
+MYSQL_HOST=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
