Notificar outros MS

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ MYSQL_HOST=
 MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
+
+URL_MS_PEDIDO=https://webhook.site/6dab636e-5b37-4de4-b2f1-2c5f2719b6f9
+URL_MS_PRODUCAO=https://webhook.site/6dab636e-5b37-4de4-b2f1-2c5f2719b6f9
