--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,17 +31,17 @@ services:
     networks:
       - postech_net
 
-  # swagger-ui:
-  #   depends_on:
-  #     - app
-  #   image: swaggerapi/swagger-ui
-  #   container_name: swagger_ui_container
-  #   ports:
-  #     - "80:8080"
-  #   volumes:
-  #     - ./swagger:/usr/share/nginx/html/swagger
-  #   environment:
-  #     API_URL: /swagger/openapi.yaml
+  swagger-ui:
+    depends_on:
+      - app
+    image: swaggerapi/swagger-ui
+    container_name: swagger_ui_container
+    ports:
+      - "80:8080"
+    volumes:
+      - ./swagger:/usr/share/nginx/html/swagger
+    environment:
+      API_URL: /swagger/openapi.yaml
 
 networks:
   postech_net:
