--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-postech}
       MYSQL_HOST: ${MYSQL_HOST:-localhost}
     ports:
-      - '3307:3306'
+      - '${MYSQL_PORT:-3307}:3306'
     volumes:
       - volume_db:/var/lib/mysql
     networks:
