--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rafael Gonçalves <rafaelswitek@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -31,6 +32,7 @@
     "typescript": "*"
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
