Implementaçaõ da fila

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,16 @@ MERCADO_PAGO_KEY=
 MERCADO_PAGO_USER_ID=
 MERCADO_PAGO_POS_ID=
 
-MYSQL_PORT=
-MYSQL_ROOT_PASSWORD=
-MYSQL_HOST=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_PORT=3306
+MYSQL_ROOT_PASSWORD=root
+MYSQL_HOST=db
+MYSQL_DATABASE=ms_pagamento
+MYSQL_USER=postech
+MYSQL_PASSWORD=postech
 
-URL_MS_PEDIDO=https://webhook.site/6dab636e-5b37-4de4-b2f1-2c5f2719b6f9
-URL_MS_PRODUCAO=https://webhook.site/6dab636e-5b37-4de4-b2f1-2c5f2719b6f9
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
+
+QUEUE_URL=amqp://admin:admin@rabbitmq:5672
+QUEUE_1=pedido_confirmado
+QUEUE_2=pedido_pago
