--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3'
+version: "3"
 
 services:
   db:
     image: mariadb:10.9-jammy
+    container_name: mariadb
     restart: always
     env_file:
       - .env
@@ -14,34 +15,11 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-postech}
       MYSQL_HOST: ${MYSQL_HOST:-localhost}
     ports:
-      - '${MYSQL_PORT:-3307}:3306'
+      - "3307:3306"
     volumes:
       - volume_db:/var/lib/mysql
     networks:
       - postech_net
-
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - '3000:3000'
-    depends_on:
-      - db
-    networks:
-      - postech_net
-
-  swagger-ui:
-    depends_on:
-      - app
-    image: swaggerapi/swagger-ui
-    container_name: swagger_ui_container
-    ports:
-      - "80:8080"
-    volumes:
-      - ./swagger:/usr/share/nginx/html/swagger
-    environment:
-      API_URL: /swagger/openapi.yaml
 
   rabbitmq:
     image: "rabbitmq:3.8-management-alpine"
@@ -53,8 +31,21 @@ services:
     volumes:
       - "./.rabbitmq_data:/var/lib/rabbitmq/mnesia"
     environment:
-      - RABBITMQ_DEFAULT_USER=admin
-      - RABBITMQ_DEFAULT_PASS=admin
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER:-admin}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD:-admin}
+    networks:
+      - postech_net
+
+  app:
+    container_name: node
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+      - rabbitmq
     networks:
       - postech_net
 
