--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "mysql2": "^3.7.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
